[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI/MainMenu/StartGUI.gd" type="Script" id=1]
[ext_resource path="res://GUI/Themes/MenuTheme.tres" type="Theme" id=2]

[sub_resource type="Animation" id=1]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="StartGUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
load_button_path = NodePath("CenterContainer/Panel/VBoxContainer/Load")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 1.0
margin_right = 2.0
margin_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CenterContainer"]
margin_left = 565.0
margin_top = 230.0
margin_right = 715.0
margin_bottom = 490.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 150, 260 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
margin_right = 110.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 7
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "New Game"

[node name="Load" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 36.0
margin_right = 110.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 2 )
disabled = true
text = "Continue"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 72.0
margin_right = 110.0
margin_bottom = 76.0

[node name="Extras" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 80.0
margin_right = 110.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "Extras"

[node name="Options" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 116.0
margin_right = 110.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "Options"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 152.0
margin_right = 110.0
margin_bottom = 156.0

[node name="About" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 160.0
margin_right = 110.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "About"

[node name="Quit" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 196.0
margin_right = 110.0
margin_bottom = 228.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 1 )
anims/show = SubResource( 2 )
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/Extras" to="." method="_on_Extras_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
